fixed stuff here and ther

--- a/features/i18n.mdx
+++ b/features/i18n.mdx
@@ -3,8 +3,6 @@ title: 'Make it International'
 description: 'Using translations in your app'
 ---
 
-import { Callout } from 'nextra/components'
-
 # i18n Guide
 
 The BuildWithAI boilerplate comes with a complete internationalization (i18n) system that makes it easy to create multilingual apps. The system uses JSON files for translations and provides a simple hook-based API to integrate translations into your components. This guide will show you how to use and extend the i18n system in your app.
@@ -81,13 +79,13 @@ function ProfileScreen() {
 }
 ```
 
-<Callout>
+<Tip>
 ### Best Practices
 
 - Use same keys in both language files
 - Organize by feature: `welcome`, `settings`, etc.
 - Test after adding new translations
-</Callout>
+</Tip>
 
 ## Adding a New Language
 
