--- a/features/posthog-setup.mdx
+++ b/features/posthog-setup.mdx
@@ -3,8 +3,6 @@ title: "Track User Analytics"
 description: "Add powerful analytics to your app with PostHog integration"
 ---
 
-import { Steps, Tabs, Tab } from 'nextra-theme-docs'
-
 This boilerplate comes with built-in support for PostHog analytics, helping you understand how users interact with your app. Let's set it up!
 
 <Steps>
@@ -97,9 +95,9 @@ This allows you to track user navigation throughout your app automatically.
 
 ## Next Steps
 
-<Callout type="info">
+<Info>
   For more advanced features and customization options, check out the [PostHog React Native SDK documentation](https://posthog.com/docs/libraries/react-native).
-</Callout>
+</Info>
 
 Now that you have PostHog set up, you can:
 - Create funnels to track user conversion
