--- a/index.mdx
+++ b/index.mdx
@@ -3,74 +3,68 @@ title: BuildWithAI Boilerplate
 description: "A comprehensive mobile app starter kit for React Native & Expo"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="BuildWithAI Boilerplate"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.png"
-  alt="BuildWithAI Boilerplate"
-/>
+## Production-Ready React Native Starter Kit
 
-## Welcome to BuildWithAI Boilerplate
+BuildWithAI is your complete solution for building professional mobile apps. Get from zero to app store with our battle-tested stack and step-by-step guides.
 
-BuildWithAI is a production-ready starter kit for building mobile applications with React Native and Expo. It includes everything you need to get started quickly while maintaining best practices and a scalable architecture.
+<CardGroup cols={2}>
+  <Card
+    title="Quick Start"
+    icon="rocket"
+    href="/quickstart/project-setup"
+  >
+    Set up your development environment and create your first app in minutes
+  </Card>
+  <Card
+    title="Development Builds"
+    icon="mobile"
+    href="/quickstart/development-build"
+  >
+    Test your app on real devices with native development builds
+  </Card>
+</CardGroup>
 
-<Card
-  title="Quick Start Guide"
-  icon="rocket"
-  href="/quickstart/project-setup"
->
-  Get up and running with your first mobile app in minutes
-</Card>
+## Core Features
 
-## Key Features
-
-BuildWithAI provides a complete mobile app foundation with production-ready integrations.
-
-<CardGroup cols={3}>
+<CardGroup cols={2}>
   <Card
     title="Authentication"
     icon="lock"
     href="/features/auth/supabase-setup"
   >
-    Complete auth flows with Supabase including social login
-  </Card>
-  <Card
-    title="Push Notifications"
-    icon="bell"
-    href="/features/push/setup"
-  >
-    Pre-configured push notifications for iOS and Android
+    Complete auth system with Supabase backend and social login support
   </Card>
   <Card
     title="In-App Purchases"
     icon="credit-card"
     href="/features/iap/setup"
   >
-    Monetization with RevenueCat and Superwall integration
+    Monetize your app with RevenueCat and App Store purchases
   </Card>
+</CardGroup>
+
+## Developer Experience
+
+<CardGroup cols={3}>
   <Card
-    title="Analytics"
-    icon="chart-line"
-    href="/features/analytics/posthog-setup"
-  >
-    Track user behavior with PostHog analytics
-  </Card>
-  <Card
-    title="Modern UI"
-    icon="palette"
-    href="/development/ui/nativewind"
-  >
-    Beautiful UIs with NativeWind (TailwindCSS for React Native)
-  </Card>
-  <Card
-    title="File-Based Routing"
+    title="Expo Router"
     icon="route"
     href="/development/routing/setup"
   >
-    Intuitive navigation with Expo Router
+    File-based routing for seamless navigation
+  </Card>
+  <Card
+    title="NativeWind"
+    icon="palette"
+    href="/development/ui/nativewind"
+  >
+    TailwindCSS for React Native
+  </Card>
+  <Card
+    title="TypeScript"
+    icon="code"
+    href="/development/typescript/overview"
+  >
+    Type-safe development
   </Card>
 </CardGroup>
