--- a/quickstart/install-development-build.mdx
+++ b/quickstart/install-development-build.mdx
@@ -3,132 +3,125 @@ title: "3. Install & Run Your App"
 description: "Install and set up your development build on your device"
 ---
 
-import { Tip, Info, Note } from 'nextra/components'
-import { Tabs, Tab } from 'nextra/components'
-import { Steps, Step } from 'nextra/components'
-import { Accordion } from 'nextra/components'
-
 ## Installing Your Development Build
 
+<Tabs>
+  <Tab title="iOS">
+    <Steps>
+      <Step title="Install the App">
+        After the build completes:
+        1. Scan the QR code from the EAS dashboard or terminal
+        2. Tap "Open with iTunes" when it appears in the Camera app
+        3. Confirm installation when prompted
+            
+        The app will appear in your device's app library.
+      </Step>
+
+      <Step title="Enable Developer Mode">
+        <Info>
+          If you're using iOS 16 or newer, you'll need to enable Developer Mode on your iPhone to run development builds.
+        </Info>
+
+        1. Open Settings > Privacy & Security
+        2. Scroll down and tap Developer Mode
+        3. Toggle the switch to enable it
+        4. Tap Restart in the security warning
+        5. After restart, unlock your device
+        6. Tap Turn On in the confirmation alert
+        7. Enter your device passcode
+      </Step>
+    </Steps>
+
+    <Tip>
+      For additional help, see [Expo's iOS Setup Guide](https://docs.expo.dev/get-started/set-up-your-environment/?mode=development-build&platform=ios&device=physical)
+    </Tip>
+  </Tab>
+
+  <Tab title="Android">
+    <Steps>
+      <Step title="Install the App">
+        After the build completes:
+        1. Scan the QR code from the terminal or EAS dashboard
+        2. Download the APK file when prompted
+        3. If asked about "Install unknown apps":
+           - Tap Settings
+           - Enable installation for your browser
+           - Return to the installation
+        4. Tap "Install" to complete setup
+            
+        The app will appear in your device's app library.
+      </Step>
+    </Steps>
+
+    <Tip>
+      For additional help, see [Expo's Android Setup Guide](https://docs.expo.dev/get-started/set-up-your-environment/?mode=development-build&platform=android&device=physical)
+    </Tip>
+  </Tab>
+</Tabs>
+
 <Steps>
-  <Step title="Install the Build">
-    <Tabs>
-      <Tab title="iOS">
-        <Steps>
-          <Step title="Install on Your Device">
-            After the build completes:
-            - Scan the QR code from the EAS dashboard or terminal
-            - Tap "Open with iTunes" when it appears in the Camera app
-            - Confirm installation when prompted
-            
-            The app will appear in your device's app library.
-          </Step>
-
-          <Step title="Enable Developer Mode">
-            <Info>
-              If you're using iOS 16 or newer, you'll need to enable Developer Mode on your iPhone to run development builds.
-            </Info>
-
-            1. Open Settings > Privacy & Security and scroll down to Developer Mode
-
-            2. Tap the switch to enable Developer Mode
-               - You'll see a security warning alert
-               - Tap Restart to continue
-
-            3. After your device restarts:
-               - Unlock your device
-               - Tap Turn On in the confirmation alert
-               - Enter your device passcode when prompted
-          </Step>
-        </Steps>
-
-        <Tip>
-          For additional help, see [Expo's iOS Setup Guide](https://docs.expo.dev/get-started/set-up-your-environment/?mode=development-build&platform=ios&device=physical)
-        </Tip>
-      </Tab>
-
-      <Tab title="Android">
-        <Steps>
-          <Step title="Install on Your Device">
-            After the build completes:
-            1. Scan the QR code shown in the terminal or EAS dashboard
-            2. Download the APK file when prompted
-            3. When your browser asks to install the APK:
-               - If prompted about "Install unknown apps", tap Settings
-               - Enable installation permission for your browser
-               - Go back and tap "Install"
-            
-            The app will appear in your device's app library.
-          </Step>
-        </Steps>
-
-        <Tip>
-          For additional help, see [Expo's Android Setup Guide](https://docs.expo.dev/get-started/set-up-your-environment/?mode=development-build&platform=android&device=physical)
-        </Tip>
-      </Tab>
-    </Tabs>
-  </Step>
-
-  <Step title="Start the Development Server">
-    Once you have installed the development build on your device, start the development server:
+  <Step title="Start the Server">
+    Start the development server:
 
     ```bash
     npx expo start
     ```
+  </Step>
 
-    Then connect your device to the development server:
-
+  <Step title="Connect Your Device">
     1. Open the app on your device
-    2. Log in to your Expo account by pressing the profile icon in the top right
-    3. Tap "Fetch development servers" and select your server from the list
-    4. Or just scan the QR code from the terminal
+    2. Tap the profile icon in the top right
+    3. Log in to your Expo account
+    4. Tap "Fetch development servers"
+    5. Select your server from the list
+
+    **Alternatively**, just scan the QR code from the terminal.
 
     <Info>
       Make sure your computer and device are on the same Wi-Fi network for the best development experience.
     </Info>
-
-    <Accordion title="QR Code Not Working?">
-      First, check your network setup:
-
-      1. **Check Network Connection**
-         - Make sure your computer and phone are using the same network
-         - This could be the same Wi-Fi, or a hotspot connection
-         - Check that you're not accidentally using different networks
-
-      2. **Check Network Type** (if at home)
-         - Your home network might be set as "Public" in your system settings
-         - Try changing it to "Private" in your Wi-Fi settings
-
-      If you still can't connect, or if you're on a public network (like at cafes, schools or libraries), you'll need to use tunnel mode:
-
-      1. Install ngrok with admin privileges:
-      <Tabs>
-        <Tab title="Windows">
-          ```bash
-          # Run PowerShell as Administrator
-          npm install --global @expo/ngrok
-          ```
-        </Tab>
-        <Tab title="macOS/Linux">
-          ```bash
-          sudo npm install --global @expo/ngrok
-          ```
-        </Tab>
-      </Tabs>
-
-      2. Start the tunnel:
-      ```bash
-      npx expo start --tunnel
-      ```
-
-      3. Scan the new QR code that appears
-
-      <Info>
-        Note: Tunnel mode is slower than a direct connection, so try to use the same network when possible.
-      </Info>
-    </Accordion>
   </Step>
 </Steps>
+
+<Accordion title="QR Code Not Working?">
+  ### Check Network Setup
+  1. **Same Network**
+     - Ensure your computer and phone use the same Wi-Fi
+     - A hotspot connection also works
+     - Double-check you're not on different networks
+
+  2. **Network Privacy** (Home Networks)
+     - Check if your network is set as "Public"
+     - Change to "Private" in Wi-Fi settings
+
+  ### Use Tunnel Mode
+  If you're on a public network (cafes, schools, libraries) or still can't connect:
+
+  1. Install ngrok with admin privileges:
+  <Tabs>
+    <Tab title="Windows">
+      ```bash
+      npm install -g @expo/ngrok@^4.1.0
+      ```
+    </Tab>
+    <Tab title="macOS">
+      ```bash
+      sudo npm install -g @expo/ngrok@^4.1.0
+      ```
+    </Tab>
+  </Tabs>
+
+  2. Start the tunnel:
+  ```bash
+  npx expo start --tunnel
+  ```
+
+  3. Scan the new QR code that appears
+
+  <Info>
+    Note: Tunnel mode is slower than a direct connection, so try to use the same network when possible.
+  </Info>
+</Accordion>
 
 ## 🚀 Awesome Job!
 
