--- a/quickstart/project-setup.mdx
+++ b/quickstart/project-setup.mdx
@@ -15,13 +15,23 @@ Before you begin, make sure you have the following installed:
 - [Git](https://git-scm.com/downloads)
 - [Windsurf IDE](https://windsurf.com/download/editor)
 
-### Step 1: Clone the Repository
+### Step 1: Create Your Project
 
-Clone the BuildWithAI repository from GitHub:
+1. Open Windsurf IDE
+2. Click the "Open Folder" button
+3. Create a new empty folder for your project
+4. Select this folder and click "Open"
+
+### Step 2: Get the Project Files
+
+1. Open the terminal in Windsurf by pressing:
+   - Windows: `Ctrl+Shift+\``
+   - macOS: `Cmd+Shift+\``
+
+2. Copy this command and paste it in the terminal:
 
 ```bash
-git clone https://github.com/buildwithai-plus/boilerplate.git your-app-name
-cd your-app-name
+git clone https://github.com/steffensunbranch/buildwithai-boilerplate.git .
 git remote remove origin
 ```
 
