--- a/features/admob-setup.mdx
+++ b/features/admob-setup.mdx
@@ -3,13 +3,11 @@ title: 'Setup AdMob Advertising'
 description: 'How to set up Google AdMob mobile ads in your app'
 ---
 
-import { Callout, Steps, Step, Tabs, Tab } from 'nextra/components'
-
 # AdMob Integration
 
-<Callout type="warning">
+<Warning>
   **Important:** Add monetization to your app only after you've published it to the app stores. Implementing ads too early in your development process can lead to account issues with Google AdMob.
-</Callout>
+</Warning>
 
 ## When to Add AdMob
 
@@ -135,9 +133,9 @@ This approach ensures your account remains in good standing with ad networks and
 
 ## Creating Ad Units
 
-<Callout type="info">
+<Warning>
   When testing your app, always use test ad units. Using production ad units during development can lead to account suspension.
-</Callout>
+</Warning>
 
 After your app is published to the app stores:
 
@@ -162,6 +160,6 @@ EXPO_PUBLIC_ADMOB_BANNER_ANDROID=ca-app-pub-xxxxxxxxxxxxxxxx/xxxxxxxxxx
 EXPO_PUBLIC_ADMOB_BANNER_IOS=ca-app-pub-xxxxxxxxxxxxxxxx/xxxxxxxxxx
 ```
 
-<Callout type="warning">
+<Warning>
   Only enable these variables for Production builds. Make sure "Preview" and "Development" environments are unchecked.
-</Callout>
+</Warning>
