--- a/quickstart/development-build.mdx
+++ b/quickstart/development-build.mdx
@@ -3,70 +3,51 @@ title: "1. Create Development Build"
 description: "Create and use development builds for efficient app development"
 ---
 
-import { Tip, Info, Note } from 'nextra/components'
-import { Tabs, Tab } from 'nextra/components'
-import { Steps, Step } from 'nextra/components'
-import { Accordion, AccordionGroup } from 'nextra/components'
-
 ## Development Builds
 
-<Steps>
-  <Step title="Set Up EAS">
-    Before creating a development build, make sure you've completed the [EAS Setup](/quickstart/eas-setup) guide which covers:
-    - Installing the EAS CLI
-    - Logging in to Expo
-    - Initializing your EAS project
-  </Step>
+Make sure you've completed the [EAS Setup](/quickstart/eas-setup) guide before proceeding.
 
-  <Step title="Platform-Specific Setup">
-    <Tabs>
+<Tabs>
       <Tab title="iOS">
         <Steps>
           <Step title="Enroll in Apple Developer Program">
             An active [Apple Developer Program](https://developer.apple.com/programs/enroll) subscription is required (costs $99 per year).
           </Step>
 
-          <Step title="Register Your Device & Install Provisioning Profile">
+          <Step title="Register Your Device">
             ```bash
             eas device:create
             ```
 
-            The command will walk you through these steps:
+            You'll be guided through these prompts:
 
-            1. **Confirm Expo Account**
-               ```bash
-               You're inside the project directory. Would you like to use the [your-expo-account-name] account? » (Y/n)
-               ```
-               Just press `Y` to continue with your current account
+            1. When asked about your Expo account, press `Y` to continue with your current account.
 
-            2. **Sign in to Apple Developer**
-               ```bash
-               ? Apple ID: >> [your-apple-id] (if correct hit `Enter`)
-               ```
-               ```bash
-               ? Password: >> (copy and paste your password)
-               ```
-            3. **Choose Registration Method**
-               ```bash
-               ? How would you like to register your devices?
-               > Website - generates a registration URL ...
-               ```
-               Press `Enter` to use the website method (recommended)
+            2. Enter your Apple ID credentials when prompted.
 
-            On your iOS device:
+            3. For device registration method, select the website option (recommended) by pressing `Enter`.
+
+            A QR code and registration URL will appear in your terminal. On your iOS device:
+
+            1. Scan the QR code or open the provided URL
+            2. Tap the **Download Profile** button
+            3. Open the **Settings** app and install the provisioning profile
+            4. Return to your browser to confirm the successful installation
           </Step>
 
-          <Step title="Create iOS Development Build">
-            <Tip>
-              Before running the build command, check that `developmentClient` is set to `true` in your `eas.json` under the development profile.
-            </Tip>
+          <Step title="Create Development Build">
+            <Info>
+              Ensure your `eas.json` has `developmentClient: true` in the development profile before proceeding.
+            </Info>
 
             Run the build command:
             ```bash
             eas build --platform ios --profile development
-            # Or use the shorter version:
-            eas build -p ios --profile development
             ```
+
+            <Tip>
+              You can also use the shorter command: `eas build -p ios --profile development`
+            </Tip>
 
             You'll be guided through these prompts:
 
@@ -82,10 +63,10 @@ import { Accordion, AccordionGroup } from 'nextra/components'
             4. **Push Notifications**  
                Press `Y` to enable push notifications capability.
 
-            The build will begin in the cloud. You can monitor progress in the terminal or via the EAS dashboard.
+            The build will begin in the cloud and takes approximately 10-15 minutes to complete. You can monitor progress in the terminal or via the EAS dashboard.
 
             <Info>
-              The build process takes about 10-15 minutes. While waiting, proceed to the [Supabase Setup](/quickstart/supabase-setup) guide, then return to [Install Development Build](/quickstart/install-development-build) once the build is complete.
+              While the build is in progress, continue to the next guide: [Supabase Setup](/quickstart/supabase-setup)
             </Info>
           </Step>
         </Steps>
@@ -93,17 +74,19 @@ import { Accordion, AccordionGroup } from 'nextra/components'
 
       <Tab title="Android">
         <Steps>
-          <Step title="Create Android Development Build">
-            <Tip>
-              Before running the build command, check that `developmentClient` is set to `true` in your `eas.json` under the development profile.
-            </Tip>
+          <Step title="Create Development Build">
+            <Info>
+              Ensure your `eas.json` has `developmentClient: true` in the development profile before proceeding.
+            </Info>
 
             Run the build command:
             ```bash
             eas build --platform android --profile development
-            # Or use the shorter version:
-            eas build -p android --profile development
             ```
+
+            <Tip>
+              You can also use the shorter command: `eas build -p android --profile development`
+            </Tip>
 
             You'll be guided through these prompts:
 
@@ -113,20 +96,12 @@ import { Accordion, AccordionGroup } from 'nextra/components'
             2. **Android Keystore**  
                When asked about generating a new keystore, press `Y` (required for signing your app).
             
-            The build will begin in the cloud. You can monitor progress in the terminal or via the EAS dashboard.
+            The build will begin in the cloud and takes approximately 10-15 minutes to complete. You can monitor progress in the terminal or via the EAS dashboard.
 
             <Info>
-              The build process takes about 10-15 minutes. While waiting, proceed to the [Supabase Setup](/quickstart/supabase-setup) guide, then return to [Install Development Build](/quickstart/install-development-build) once the build is complete.
+              While the build is in progress, continue to the next guide: [Supabase Setup](/quickstart/supabase-setup)
             </Info>
           </Step>
         </Steps>
       </Tab>
     </Tabs>
-  </Step>
-
-  <Step title="Next Steps">
-    Once your build completes:
-    1. Continue with [Supabase Setup](/quickstart/supabase-setup) if you haven't already
-    2. Follow the [Install Development Build](/quickstart/install-development-build) guide to get your app running
-  </Step>
-</Steps>
