fix: prereqs in import-products-rc

--- a/features/in-app-purchases/import-products-rc.mdx
+++ b/features/in-app-purchases/import-products-rc.mdx
@@ -5,12 +5,12 @@ description: "Import your subscription products from app stores into RevenueCat 
 
 ## Prerequisites
 
-Before importing products to RevenueCat, make sure you have:
+To set up and test in-app purchases with RevenueCat and Superwall, you'll need to:
 
-- Completed the [RevenueCat setup](./revenuecat)
-- Created [Android products](./android-products) in Google Play Console
-- Created [iOS products](./ios-products) in App Store Connect
-- Tested your purchases with [Android closed testing](./closed-testing) or [iOS sandbox testing](./ios-sandbox)
+- Complete the [RevenueCat setup](./revenuecat)
+- Create [Android products](./android-products) in Google Play Console
+- Create [iOS products](./ios-products) in App Store Connect
+- Have your app configured for [Android closed testing](./closed-testing) or [iOS sandbox testing](./ios-sandbox)
 
 ## Configure Entitlements
 
