--- a/index.mdx
+++ b/index.mdx
@@ -5,66 +5,124 @@ description: "A comprehensive mobile app starter kit for React Native & Expo"
 
 ## Production-Ready React Native Starter Kit
 
-BuildWithAI is your complete solution for building professional mobile apps. Get from zero to app store with our battle-tested stack and step-by-step guides.
+BuildWithAI is your complete solution for building professional mobile apps. Follow this step-by-step process to get from zero to app store with our battle-tested stack.
 
-<CardGroup cols={2}>
+## 1. Setup Your Project (Required)
+
+<CardGroup cols={3}>
   <Card
-    title="Quick Start"
+    title="Project Setup"
     icon="rocket"
     href="/quickstart/project-setup"
   >
-    Set up your development environment and create your first app in minutes
+    Set up your development environment and create your first app
   </Card>
   <Card
-    title="Development Builds"
-    icon="mobile"
-    href="/quickstart/development-build"
+    title="App Configuration"
+    icon="wrench"
+    href="/quickstart/app-configuration"
   >
-    Test your app on real devices with native development builds
+    Configure your app settings and environment variables
+  </Card>
+  <Card
+    title="EAS Setup"
+    icon="cloud"
+    href="/quickstart/eas-setup"
+  >
+    Set up Expo Application Services for building and deployment
   </Card>
 </CardGroup>
 
-## Core Features
+## 2. Test on Your Phone (Required)
+
+<CardGroup cols={3}>
+  <Card
+    title="Development Build"
+    icon="mobile"
+    href="/quickstart/development-build"
+  >
+    Create development builds for testing on real devices
+  </Card>
+  <Card
+    title="Supabase Setup"
+    icon="database"
+    href="/quickstart/supabase-setup"
+  >
+    Set up your backend database and authentication
+  </Card>
+  <Card
+    title="Install Development Build"
+    icon="download"
+    href="/quickstart/install-development-build"
+  >
+    Install and test your development build on your device
+  </Card>
+</CardGroup>
+
+## 3. Work with Your App (Required)
+
+<CardGroup cols={3}>
+  <Card
+    title="UI Styling Guide"
+    icon="paintbrush"
+    href="/features/ui-styling-guide"
+  >
+    Learn how to style components with NativeWind - already configured
+  </Card>
+  <Card
+    title="Theme Customization"
+    icon="palette"
+    href="/features/theme-customization"
+  >
+    Customize colors, fonts, and overall app theme - already configured
+  </Card>
+  <Card
+    title="Text & Languages"
+    icon="globe"
+    href="/features/i18n"
+  >
+    Change app text, add new languages, and manage translations - already configured
+  </Card>
+</CardGroup>
+
+## 4. Add Features (Optional)
 
 <CardGroup cols={2}>
   <Card
-    title="Authentication"
-    icon="lock"
-    href="/features/auth/supabase-setup"
+    title="Push Notifications"
+    icon="bell"
+    href="/features/push-setup"
   >
-    Complete auth system with Supabase backend and social login support
+    Engage users with targeted push notifications
+  </Card>
+  <Card
+    title="Social Authentication"
+    icon="user-check"
+    href="/features/auth/google-auth"
+  >
+    Sign in with Google and Apple for seamless user onboarding
+  </Card>
+  <Card
+    title="Analytics"
+    icon="chart-line"
+    href="/features/posthog-setup"
+  >
+    Track user behavior and app performance with PostHog
   </Card>
   <Card
     title="In-App Purchases"
     icon="credit-card"
-    href="/features/iap/setup"
+    href="/features/in-app-purchases/overview"
   >
     Monetize your app with RevenueCat and App Store purchases
   </Card>
-</CardGroup>
-
-## Developer Experience
-
-<CardGroup cols={3}>
   <Card
-    title="Expo Router"
-    icon="route"
-    href="/development/routing/setup"
+    title="Advertising"
+    icon="megaphone"
+    href="/features/admob-setup"
   >
-    File-based routing for seamless navigation
-  </Card>
-  <Card
-    title="NativeWind"
-    icon="palette"
-    href="/development/ui/nativewind"
-  >
-    TailwindCSS for React Native
-  </Card>
-  <Card
-    title="TypeScript"
-    icon="code"
-    href="/development/typescript/overview"
-  >
-    Type-safe development
+    Generate revenue with Google AdMob integration
   </Card>
 </CardGroup>
+
+
