--- a/quickstart/project-setup.mdx
+++ b/quickstart/project-setup.mdx
@@ -1,11 +1,11 @@
 ---
-title: "1. Clone & Setup Project"
-description: "Get your BuildWithAI project up and running in minutes"
+title: "1. Clone & Setup Boilerplate"
+description: "Get your BuildWithAI boilerplate up and running in minutes"
 ---
 
-## Project Setup
+## Boilerplate Setup
 
-This guide will walk you through the process of setting up your BuildWithAI project from scratch, from cloning the repository to configuring your development environment.
+This guide will walk you through the process of setting up your BuildWithAI boilerplate from scratch, from cloning the repository to configuring your development environment.
 
 ### Prerequisites
 
@@ -17,25 +17,26 @@ Before you begin, make sure you have the following installed:
 
 ### Step 1: Create Your Project
 
-1. Open Windsurf IDE
+1. Open [Windsurf IDE](https://windsurf.com/download/editor)
 2. Click the "Open Folder" button
 3. Create a new empty folder for your project
 4. Select this folder and click "Open"
 
-### Step 2: Get the Project Files
+### Step 2: Get the Boilerplate code
 
 1. Open the terminal in Windsurf by pressing:
-   - Windows: `Ctrl+Shift+\``
-   - macOS: `Cmd+Shift+\``
+   - Windows: `Ctrl+Shift+\`` (backtick)
+   - macOS: `Cmd+Shift+\` (backtick)
 
-2. Copy this command and paste it in the terminal:
+2. Run the following commands:
 
 ```bash
 git clone https://github.com/steffensunbranch/buildwithai-boilerplate.git .
+
 git remote remove origin
 ```
 
-### Step 2: Install Dependencies
+### Step 3: Install Dependencies
 
 Install all required dependencies:
 
@@ -43,7 +44,7 @@ Install all required dependencies:
 npm install
 ```
 
-### Step 3: Create Environment Variables File
+### Step 4: Create Environment Variables File
 
 The boilerplate includes an example environment file with placeholders for various services:
 
